# nbshare

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: frontend.yml  nextjs.yml
frontend/: package.json
frontend/src/pages/: index.tsx
