[project]
name = "nbshare"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "HayatoKTYM", email = "hayakap1211@gmail.com" }
]
dependencies = [
    "fastapi[all]>=0.101.1",
    "nbconvert>=7.7.4",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
